--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   flutter:
+  
     sdk: flutter
 
 
@@ -38,6 +39,7 @@ dependencies:
   supabase_flutter: ^1.4.0
   flutter_map: ^3.1.0
   latlong2: ^0.8.1
+  intro_slider: ^4.2.0
 
 dev_dependencies:
   flutter_test:
@@ -62,8 +64,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - media/camera.png
+    - media/map.png
+    - media/navigator.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
