--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_map: ^3.1.0
   latlong2: ^0.8.1
   intro_slider: ^4.2.0
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
