--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   intro_slider: ^4.2.0
   intl: ^0.18.0
   geolocator: ^9.0.2
+  camera:
+  path_provider:
+  path:
 
 dev_dependencies:
   flutter_test:
